2004-11-24  Nathaniel Smith  <njs@codesourcery.com>

	* mt_version.hh: New file.
	* mt_version.cc: New file.
	* monotone.cc (package_revision.h): Don't include it.
	(mt_version.hh): Include it.
	(OPT_FULL_VERSION): New option.
	(options): Add it.
	(cpp_main): Implement --version and --full-version in terms of
	mt_version.hh.

	* Makefile.am (package_full_revision.h): Build it.
	(MOST_SOURCES): Add mt_version.{cc,hh}.

2004-11-24  Nathaniel Smith  <njs@codesourcery.com>

	* txt2c.cc (main): Add "--skip-trailing" option to skip trailing
	whitespace.
	* Makefile.am (package_revision.h): Generate it.
	* monotone.cc (package_revision.h): Include it.
	(cpp_main): Print it as part of --version.

2004-11-23  Nathaniel Smith  <njs@codesourcery.com>

	* tests/t_cleanup_empty_dir.at: New test.
	* testsuite.at: Call it.
	
2004-11-23  Nathaniel Smith  <njs@codesourcery.com>

	* monotone.texi (File Attributes): Document how restricted format
	of .mt-attrs currently is.  Also talk about 'the' .mt-attrs file
	instead of 'an', in response to confusion.

2004-11-23  Nathaniel Smith  <njs@codesourcery.com>

	* work.cc (build_deletion): Add missing newline.
	(build_rename): Likewise.
	(build_rename): Likewise.

2004-11-23  Nathaniel Smith  <njs@codesourcery.com>

	* work.cc: Remove tabs.

2004-11-23  Nathaniel Smith  <njs@codesourcery.com>

	* commands.cc: Remove tabs.

2004-11-23  Nathaniel Smith  <njs@codesourcery.com>

	* tests/t_add_dot.at: New test.
	* testsuite.at: Call it.

2004-11-22  Joel Rosdahl  <joel@rosdahl.net>

	* testsuite.at (NEED_UNB64): Check that python knows how to decode
	strings before using it.

2004-11-21  Joel Rosdahl  <joel@rosdahl.net>

	* testsuite.at (NEED_UNB64): Find more programs for decoding
	base64.

2004-11-20  Nathaniel Smith  <njs@codesourcery.com>

	* tests/t_merge_1.at: New test.
	* testsuite.at: Add it.
	(NEED_UNB64): New macro.
	(UNB64): Likewise.
	* tests/t_unidiff.at: Use them.
	* tests/t_unidiff2.at: Likewise.
